--- a/src/main/resources/rc/project/fxml/Dealer.fxml
+++ b/src/main/resources/rc/project/fxml/Dealer.fxml
@@ -20,7 +20,7 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="60.0" prefWidth="860.0">
                      <children>
-                        <Button fx:id="editCars" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Edit Cars" textFill="WHITE">
+                        <Button fx:id="editCars" mnemonicParsing="false" onAction="#loadEditCars" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Edit Cars" textFill="WHITE">
                            <HBox.margin>
                               <Insets right="20.0" />
                            </HBox.margin>
