--- a/src/main/resources/rc/project/fxml/AddCarsPage.fxml
+++ b/src/main/resources/rc/project/fxml/AddCarsPage.fxml
@@ -14,24 +14,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="1040.0" style="-fx-background-color: #333333;" styleClass="scroll-pane" stylesheets="@../css/Display.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.AddCarsPage">
    <children>
       <Pane prefHeight="600.0" prefWidth="1040.0">
          <children>
             <GridPane alignment="CENTER_RIGHT" layoutX="321.0" layoutY="118.0" prefHeight="374.0" prefWidth="400.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.59991455078125" minWidth="10.0" prefWidth="117.53334350585938" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.4000854492188" minWidth="10.0" prefWidth="282.0666564941406" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.59991455078125" minWidth="10.0" prefWidth="117.53334350585938" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.4000854492188" minWidth="10.0" prefWidth="282.0666564941406" />
+               </columnConstraints>
+               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <TextField fx:id="nameTextF" GridPane.columnIndex="1" />
                   <TextField fx:id="priceTextF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -85,11 +84,16 @@
                   <Font name="System Bold Italic" size="20.0" />
                </font>
             </Text>
-            <Button fx:id="addCarButton" layoutX="479.0" layoutY="519.0" mnemonicParsing="false" styleClass="record-sales" stylesheets="@../css/buttonStyle.css" text="Add car" textFill="WHITE">
+            <Button fx:id="addCarButton" layoutX="479.0" layoutY="535.0" mnemonicParsing="false" onAction="#addCarButtonAction" styleClass="record-sales" stylesheets="@../css/buttonStyle.css" text="Add car" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
+            <Text fx:id="addText" fill="WHITE" layoutY="519.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="1042.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
          </children>
          <styleClass>
             <String fx:value="vbox" />
