--- a/src/main/resources/rc/project/fxml/Dealer.fxml
+++ b/src/main/resources/rc/project/fxml/Dealer.fxml
@@ -36,7 +36,7 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="seeOrder" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="See Orders" textFill="WHITE">
+                        <Button fx:id="seeOrder" mnemonicParsing="false" onAction="#loadOrdersDealer" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="See Orders" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="20.0" right="20.0" />
                            </HBox.margin>
