--- a/src/main/resources/rc/project/fxml/SignUp.fxml
+++ b/src/main/resources/rc/project/fxml/SignUp.fxml
@@ -32,12 +32,17 @@
                      </padding>
                   </Button>
                       <PasswordField fx:id="confirmPassword" layoutX="250.0" layoutY="362.0" prefHeight="25.0" prefWidth="163.0" promptText="confirm password" />
-                  <Label fx:id="confirmPasswordLabel" alignment="CENTER" layoutX="158.0" layoutY="399.0" prefHeight="17.0" prefWidth="163.0" textAlignment="CENTER" textFill="#da3f3f">
+                  <Label fx:id="confirmPasswordLabel" alignment="CENTER" layoutX="-3.0" layoutY="399.0" prefHeight="21.0" prefWidth="480.0" textAlignment="CENTER" textFill="#da3f3f">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
                       <PasswordField fx:id="passwordTextField" layoutX="75.0" layoutY="362.0" prefHeight="25.0" prefWidth="163.0" promptText="password" />
+                  <Label fx:id="registrationMessage" layoutY="401.0" prefHeight="17.0" prefWidth="480.0" textAlignment="JUSTIFY" textFill="#4889dd">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
                 <TextField fx:id="phoneTextField" layoutX="375.0" layoutY="385.0" prefHeight="25.0" prefWidth="336.0" promptText="phone number" />
@@ -67,11 +72,6 @@
       <Separator layoutX="370.0" layoutY="332.0" prefHeight="3.0" prefWidth="345.0" />
       <Separator layoutX="370.0" layoutY="419.0" prefHeight="3.0" prefWidth="345.0" />
       <Separator layoutX="370.0" layoutY="453.0" prefHeight="3.0" prefWidth="345.0" />
-      <Label fx:id="registrationMessage" layoutX="400.0" layoutY="111.0" prefHeight="17.0" prefWidth="163.0" textAlignment="JUSTIFY" textFill="#4889dd">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
           <Text fill="#e8e3e3" layoutX="411.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="USER REGISTRATION" textAlignment="CENTER" underline="true">
               <font>
                   <Font name="System Bold" size="27.0" />
