--- a/src/main/resources/rc/project/css/Display.css
+++ b/src/main/resources/rc/project/css/Display.css
@@ -1,9 +1,15 @@
 .vbox {
     -fx-background-radius: 30px 30px 30px 30px;
 }
+
 .display {
     -fx-background-radius: 30px 30px 30px 30px;
 }
+
+.display2 {
+    -fx-background-radius: 30px;
+}
+
 .scroll-pane > .viewport {
    -fx-background-color: transparent;
 }
