--- a/src/main/resources/rc/project/fxml/Dealer.fxml
+++ b/src/main/resources/rc/project/fxml/Dealer.fxml
@@ -44,7 +44,7 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="seeReviews" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="See Reviews" textFill="WHITE">
+                        <Button fx:id="seeReviews" mnemonicParsing="false" onAction="#loadContactDealer" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Contact" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="20.0" right="20.0" />
                            </HBox.margin>
