--- a/src/main/resources/rc/project/fxml/OrderStatus.fxml
+++ b/src/main/resources/rc/project/fxml/OrderStatus.fxml
@@ -3,8 +3,10 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -16,78 +18,93 @@
             <URL value="@../css/buttonStyle.css" />
          </stylesheets>
          <children>
-            <HBox prefHeight="50.0" prefWidth="800.0">
+            <GridPane prefHeight="50.0" prefWidth="800.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.0" minWidth="10.0" prefWidth="81.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="189.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="10.0" prefWidth="35.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="84.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="79.0" minWidth="10.0" prefWidth="37.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="108.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="82.0" minWidth="10.0" prefWidth="23.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="103.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" prefWidth="41.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Car model:" translateX="20.0" translateY="15.0">
-                     <HBox.margin>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Car model:" GridPane.halignment="RIGHT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="orderModel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="From:" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
                         <Insets />
-                     </HBox.margin>
+                     </GridPane.margin>
+                  </Text>
+                  <Text fx:id="orderPrice" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.halignment="LEFT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text fx:id="orderFrom" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="5" GridPane.halignment="LEFT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text fx:id="carDate3" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="To:" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Text>
-                  <Text fx:id="orderModel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="25.0" translateY="15.0" HBox.hgrow="NEVER">
+                  <Text fx:id="orderTo" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="7">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
                   </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" translateX="180.0" translateY="15.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="-100.0" />
-                     </HBox.margin>
-                  </Text>
-                  <Text fx:id="orderPrice" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="185.0" translateY="15.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="From:" translateX="240.0" translateY="15.0">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" GridPane.columnIndex="8" GridPane.halignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Text>
-                  <Text fx:id="orderFrom" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="245.0" translateY="15.0">
+                  <Text fx:id="orderStatus" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="9">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
-                  </Text>
-                  <Text fx:id="carDate3" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="To:" translateX="300.0" translateY="15.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-                  <Text fx:id="orderTo" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="305.0" translateY="15.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" translateX="365.0" translateY="15.0">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-                  <Text fx:id="orderStatus" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="370.0" translateY="15.0">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
                   </Text>
                </children>
-            </HBox>
+            </GridPane>
          </children>
       </Pane>
    </children>
